--- a/benchmarks/Dockerfile
+++ b/benchmarks/Dockerfile
@@ -1,10 +1,7 @@
 # Use an official Python runtime as a parent image
 FROM python:3.8
 
-# Expose default mlflow port
-EXPOSE 5000
-
 # Install any needed packages specified in requirements.txt
-RUN pip install psycopg2-binary fasttrackml mlflow
+RUN pip install matplotlib pandas
 
-CMD [ "mlflow" , "server" ]
+CMD [ "python" , "generateReports.py" ]
