--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     environment:
       GOCACHE: /cache/go-build
       GOMODCACHE: /cache/go-mod
+      FML_LOG_LEVEL: ${FML_LOG_LEVEL:-fatal}
       FML_DATABASE_URI: ${FML_DATABASE_URI:-postgres://postgres:postgres@postgres/postgres}
       FML_S3_ENDPOINT_URI: http://minio:9000
       FML_GS_ENDPOINT_URI: http://google-storage:4443/storage/v1/
