--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,8 +16,7 @@ run:
   tests: true
 
   # creators of build tags, all linters use it. Default is empty creators.
-  build-tags:
-    - integration
+  build-tags: []
 
   # which dirs to skip: they won't be analyzed;
   # can use regexp here: generated.*, regexp is applied on full path;
