feat: remove extra gitignore messages

--- a/benchmarks/docker-compose.yml
+++ b/benchmarks/docker-compose.yml
@@ -76,9 +76,9 @@ services:
         fasttrackdb:
           condition: service_healthy
 
-    throughput_test_mlflow_sqlite:
+    logging_test_mlflow_sqlite:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6ThroughputPerfScript.js --out csv=mlflowsqlitethrougput.csv -e HOSTNAME=mlflow:5000 
+      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/mlflowsqlitethrougput.csv -e HOSTNAME=mlflow:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -87,9 +87,9 @@ services:
       depends_on:
         - mlflow
       
-    throughput_test_mlflow_postgres:
+    logging_test_mlflow_postgres:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6ThroughputPerfScript.js --out csv=mlflowpostgresthrougput.csv -e HOSTNAME=mlflowpostgres:5000 
+      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/mlflowpostgresthrougput.csv -e HOSTNAME=mlflowpostgres:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -98,9 +98,9 @@ services:
       depends_on:
         - mlflowpostgres
 
-    throughput_test_fasttrack_sqlite:
+    logging_test_fasttrack_sqlite:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6ThroughputPerfScript.js --out csv=fasttracksqlitethrougput.csv -e HOSTNAME=fasttrack:5000 
+      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/fasttracksqlitethrougput.csv -e HOSTNAME=fasttrack:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -109,9 +109,9 @@ services:
       depends_on:
         - fasttrack
       
-    throughput_test_fasttrack_postgres:
+    logging_test_fasttrack_postgres:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6ThroughputPerfScript.js --out csv=fasttrackpostgresthrougput.csv -e HOSTNAME=fasttrackpostgres:5000 
+      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/fasttrackpostgresthrougput.csv -e HOSTNAME=fasttrackpostgres:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -122,7 +122,7 @@ services:
 
     retreival_test_mlflow_sqlite:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=mlflowsqliteretreival.csv -e HOSTNAME=mlflow:5000 
+      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=benchmark_outputs/mlflowsqliteretreival.csv -e HOSTNAME=mlflow:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -133,7 +133,7 @@ services:
 
     retreival_test_mlflow_postgres:
       image: grafana/k6:latest
-      command: run -u 20 -i 100 k6RetreivalPerfScript.js --out csv=mlflowpostgresretreival.csv -e HOSTNAME=mlflowpostgres:5000 
+      command: run -u 20 -i 100 k6RetreivalPerfScript.js --out csv=benchmark_outputs/mlflowpostgresretreival.csv -e HOSTNAME=mlflowpostgres:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -144,7 +144,7 @@ services:
       
     retreival_test_fasttrack_postgres:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=fasttrackpostgresretreival.csv -e HOSTNAME=fasttrackpostgres:5000 
+      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=benchmark_outputs/fasttrackpostgresretreival.csv -e HOSTNAME=fasttrackpostgres:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -155,7 +155,7 @@ services:
 
     retreival_test_fasttrack_sqlite:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=fasttracksqliteretreival.csv -e HOSTNAME=fasttrack:5000 
+      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=benchmark_outputs/fasttracksqliteretreival.csv -e HOSTNAME=fasttrack:5000 
       working_dir: /src
       volumes:
         - .:/src
