feat: remove extra gitignore messages

--- a/.gitignore
+++ b/.gitignore
@@ -29,15 +29,4 @@ python/build/
 python/*.egg-info/
 wheelhouse/
 
-.aim
-mlruns
-.pytest_cache
-mlflowsqlitethrougput.csv
-mlflowpostgresthrougput.csv
-fasttracksqlitethrougput.csv
-fasttrackpostgresthrougput.csv
-mlflowsqliteretreival.csv
-mlflowpostgresretreival.csv
-fasttrackpostgresretreival.csv
-fasttracksqliteretreival.csv
-performanceReport.png
+benchmark_outputs/
