--- a/.gitignore
+++ b/.gitignore
@@ -28,18 +28,8 @@ python/build/
 python/*.egg-info/
 wheelhouse/
 
-.aim
-mlruns
-.pytest_cache
-mlflowsqlitethrougput.csv
-mlflowpostgresthrougput.csv
-fasttracksqlitethrougput.csv
-fasttrackpostgresthrougput.csv
-mlflowsqliteretreival.csv
-mlflowpostgresretreival.csv
-fasttrackpostgresretreival.csv
-fasttracksqliteretreival.csv
-performanceReport.png
+benchmark_outputs/
+
 
 # Python package
 __pycache__/
