--- a/benchmarks/docker-compose.yml
+++ b/benchmarks/docker-compose.yml
@@ -78,7 +78,7 @@ services:
 
     logging_test_mlflow_sqlite:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/mlflowsqlitethrougput.csv -e HOSTNAME=mlflow:5000 
+      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/mlflowsqlitelogging.csv -e HOSTNAME=mlflow:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -89,7 +89,7 @@ services:
       
     logging_test_mlflow_postgres:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/mlflowpostgresthrougput.csv -e HOSTNAME=mlflowpostgres:5000 
+      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/mlflowpostgreslogging.csv -e HOSTNAME=mlflowpostgres:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -100,7 +100,7 @@ services:
 
     logging_test_fasttrack_sqlite:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/fasttracksqlitethrougput.csv -e HOSTNAME=fasttrack:5000 
+      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/fasttracksqlitelogging.csv -e HOSTNAME=fasttrack:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -111,7 +111,7 @@ services:
       
     logging_test_fasttrack_postgres:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/fasttrackpostgresthrougput.csv -e HOSTNAME=fasttrackpostgres:5000 
+      command: run  -u 20 -i 100  k6LoggingPerfScript.js --out csv=benchmark_outputs/fasttrackpostgreslogging.csv -e HOSTNAME=fasttrackpostgres:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -120,9 +120,9 @@ services:
       depends_on:
         - fasttrackpostgres
 
-    retreival_test_mlflow_sqlite:
+    retrieval_test_mlflow_sqlite:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=benchmark_outputs/mlflowsqliteretreival.csv -e HOSTNAME=mlflow:5000 
+      command: run  -u 20 -i 100  k6RetrievalPerfScript.js --out csv=benchmark_outputs/mlflowsqliteretrieval.csv -e HOSTNAME=mlflow:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -131,9 +131,9 @@ services:
       depends_on:
         - mlflow
 
-    retreival_test_mlflow_postgres:
+    retrieval_test_mlflow_postgres:
       image: grafana/k6:latest
-      command: run -u 20 -i 100 k6RetreivalPerfScript.js --out csv=benchmark_outputs/mlflowpostgresretreival.csv -e HOSTNAME=mlflowpostgres:5000 
+      command: run -u 20 -i 100 k6RetrievalPerfScript.js --out csv=benchmark_outputs/mlflowpostgresretrieval.csv -e HOSTNAME=mlflowpostgres:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -142,9 +142,9 @@ services:
       depends_on:
         - mlflowpostgres
       
-    retreival_test_fasttrack_postgres:
+    retrieval_test_fasttrack_postgres:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=benchmark_outputs/fasttrackpostgresretreival.csv -e HOSTNAME=fasttrackpostgres:5000 
+      command: run  -u 20 -i 100  k6RetrievalPerfScript.js --out csv=benchmark_outputs/fasttrackpostgresretrieval.csv -e HOSTNAME=fasttrackpostgres:5000 
       working_dir: /src
       volumes:
         - .:/src
@@ -153,9 +153,9 @@ services:
       depends_on:
         - fasttrackpostgres
 
-    retreival_test_fasttrack_sqlite:
+    retrieval_test_fasttrack_sqlite:
       image: grafana/k6:latest
-      command: run  -u 20 -i 100  k6RetreivalPerfScript.js --out csv=benchmark_outputs/fasttracksqliteretreival.csv -e HOSTNAME=fasttrack:5000 
+      command: run  -u 20 -i 100  k6RetrievalPerfScript.js --out csv=benchmark_outputs/fasttracksqliteretrieval.csv -e HOSTNAME=fasttrack:5000 
       working_dir: /src
       volumes:
         - .:/src
