--- a/docs/example/pyproject.toml
+++ b/docs/example/pyproject.toml
@@ -1,15 +1,17 @@
 [tool.poetry]
 name = "fast-track-test"
 version = "0.1.0"
-description = "A Random Forest Classifier for EMG Data - Fast Track Test"
+description = "A Stable Baselines Example for Fast Track"
 authors = ["Sharpz7 <adam.mcarthur62@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pandas = "^1.5.3"
-scikit-learn = "^1.2.1"
-mlflow-skinny = "^2.6.0"
-matplotlib = "^3.7.2"
+mlflow = "^2.9.1"
+torch = "^2.1.1"
+stable-baselines3 = "^2.2.1"
+tqdm = "^4.66.1"
+moviepy = "^1.0.3"
+gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
 
 [tool.poetry.dev-dependencies]
 
