--- a/docs/example/pyproject.toml
+++ b/docs/example/pyproject.toml
@@ -8,8 +8,7 @@ authors = ["Sharpz7 <adam.mcarthur62@gmail.com>"]
 python = "^3.9"
 mlflow = "^2.9.1"
 torch = "^2.1.1"
-stable-baselines3 = "^2.2.1"
-tqdm = "^4.66.1"
+stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
 moviepy = "^1.0.3"
 gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
 pynvml = "^11.5.0"
