--- a/docs/example/pyproject.toml
+++ b/docs/example/pyproject.toml
@@ -7,13 +7,18 @@ authors = ["Sharpz7 <adam.mcarthur62@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 mlflow = "^2.9.1"
-torch = "^2.1.1"
 stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
 moviepy = "^1.0.3"
 gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
 pynvml = "^11.5.0"
+torch = {version = "^2.1.2+cu118", source = "pytorch"}
 
 [tool.poetry.dev-dependencies]
+
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cu118"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
