--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,10 @@ jobs:
       id-token: write
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: fasttrackml-wheels
+          pattern: fasttrackml-wheels-*
+          merge-multiple: true
           path: wheelhouse
 
       - name: Publish package distributions to PyPI
@@ -35,9 +36,10 @@ jobs:
       contents: write
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: fasttrackml-archives
+          pattern: fasttrackml-archives-*
+          merge-multiple: true
           path: dist
 
       - name: Create release
@@ -89,9 +91,10 @@ jobs:
           echo "tags=${tags[@]}" >> $GITHUB_OUTPUT
 
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: fasttrackml-oci-images
+          pattern: fasttrackml-oci-images-*
+          merge-multiple: true
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
