--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       GOCACHE: /cache/go-build
       GOMODCACHE: /cache/go-mod
       FML_LOG_LEVEL: ${FML_LOG_LEVEL:-fatal}
+      FML_DATABASE_BACKEND: ${FML_DATABASE_BACKEND:-postgres}
       FML_POSTGRES_URI: postgres://postgres:postgres@postgres/postgres
       FML_S3_ENDPOINT_URI: http://minio:9000
       FML_GS_ENDPOINT_URI: http://google-storage:4443/storage/v1/
