Add switch workflow step for aim2/ integration tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -172,6 +172,13 @@ jobs:
           DOCKER_BUILDKIT: 1
           FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
 
+      - name: Run Integration Tests (Aim Refactor)
+        run: make container-test
+        env:
+          DOCKER_BUILDKIT: 1
+          FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
+          FML_AIM_ENDPOINT_PATH: "/aim2/api"
+
       - name: Save cache
         if: steps.cache.outputs.cache-hit != 'true'
         run: docker run --rm -v fml-integration-tests_go-cache:/cache -v /tmp/go-cache:/dst alpine tar cf /dst/go-build.tar -C /cache go-build
