--- a/helm/fasttrackml/values.yaml
+++ b/helm/fasttrackml/values.yaml
@@ -18,7 +18,7 @@ data:
   # common service settings.
   FML_DEV_MODE: "true"
   FML_DATABASE_URI: "postgresql://admin:admin@localhost:5432" # PostgresSQL
-  # FML_DATABASE_URI: "/data/mydatabase.db # SQLite 
+  # FML_DATABASE_URI: "sqlite:///data/mydatabase.db" # SQLite 
   FML_LOG_LEVEL: "DEBUG"
 
   # database settings.
