--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,18 +166,18 @@ jobs:
         if: steps.cache.outputs.cache-hit == 'true'
         run: docker run --rm -v fml-integration-tests_go-cache:/cache -v /tmp/go-cache:/src alpine tar xf /src/go-build.tar -C /cache
 
-      - name: Run Integration Tests
+      - name: Run Integration Tests (Aim Original)
         run: make container-test
         env:
           DOCKER_BUILDKIT: 1
           FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
+          FML_RUN_ORIGINAL_AIM_SERVICE: true
 
       - name: Run Integration Tests (Aim Refactor)
         run: make container-test
         env:
           DOCKER_BUILDKIT: 1
           FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
-          FML_AIM_ENDPOINT_PATH: "/aim2/api"
 
       - name: Save cache
         if: steps.cache.outputs.cache-hit != 'true'
