*apply PR remarks.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,6 +179,13 @@ jobs:
           DOCKER_BUILDKIT: 1
           FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
 
+      - name: Run Scheduled Integration Tests
+        if: github.event_name == 'schedule'
+        run: make container-test-scheduled
+        env:
+          DOCKER_BUILDKIT: 1
+          FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
+
       - name: Save cache
         if: steps.cache.outputs.cache-hit != 'true'
         run: docker run --rm -v fml-integration-tests_go-cache:/cache -v /tmp/go-cache:/dst alpine tar cf /dst/go-build.tar -C /cache go-build
