--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -55,5 +55,30 @@ services:
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
 
+  integration-tests-scheduled:
+    image: golang:1.21
+    command: make test-scheduled-go-integration
+    volumes:
+      - ../../:/src
+      - go-cache:/cache
+    working_dir: /src
+    depends_on:
+      minio:
+        condition: service_healthy
+      google-storage:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    environment:
+      GOCACHE: /cache/go-build
+      GOMODCACHE: /cache/go-mod
+      FML_LOG_LEVEL: ${FML_LOG_LEVEL:-fatal}
+      FML_DATABASE_BACKEND: ${FML_DATABASE_BACKEND:-postgres}
+      FML_POSTGRES_URI: postgres://postgres:postgres@postgres/postgres
+      FML_S3_ENDPOINT_URI: http://minio:9000
+      FML_GS_ENDPOINT_URI: http://google-storage:4443/storage/v1/
+      AWS_ACCESS_KEY_ID: "user"
+      AWS_SECRET_ACCESS_KEY: "password"
+
 volumes:
   go-cache:
