--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,24 +167,18 @@ jobs:
         run: docker run --rm -v fml-integration-tests_go-cache:/cache -v /tmp/go-cache:/src alpine tar xf /src/go-build.tar -C /cache
 
       - name: Run Integration Tests (Aim Original)
-        run: make container-test-pipeline
+        run: make container-test
         env:
           DOCKER_BUILDKIT: 1
           FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
           FML_RUN_ORIGINAL_AIM_SERVICE: true
 
       - name: Run Integration Tests (Aim Refactor)
-        run: make container-test-pipeline
+        run: make container-test
         env:
           DOCKER_BUILDKIT: 1
           FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
-
-      - name: Run Scheduled Integration Tests
-        if: github.event_name == 'schedule'
-        run: make container-test-scheduled
-        env:
-          DOCKER_BUILDKIT: 1
-          FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
+          FML_SLOW_TESTS_ENABLED: ${{ github.event_name == 'schedule' }}
 
       - name: Save cache
         if: steps.cache.outputs.cache-hit != 'true'
