Cover `migrations` with integration tests. (#963)
Add integration tests for `migrations`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,6 +178,7 @@ jobs:
         env:
           DOCKER_BUILDKIT: 1
           FML_DATABASE_BACKEND: ${{ matrix.database-backend }}
+          FML_SLOW_TESTS_ENABLED: ${{ github.event_name == 'schedule' }}
 
       - name: Save cache
         if: steps.cache.outputs.cache-hit != 'true'
