move ui submodules to ui folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
-[submodule "fasttrackml-ui-aim"]
-	path = fasttrackml-ui-aim
+[submodule "ui/fasttrackml-ui-aim"]
+	path = ui/fasttrackml-ui-aim
 	url = ssh://git@github.com/g-research/fasttrackml-ui-aim.git
-
-[submodule "fasttrackml-ui-mlflow"]
-	path = fasttrackml-ui-mlflow
+[submodule "ui/fasttrackml-ui-mlflow"]
+	path = ui/fasttrackml-ui-mlflow
 	url = ssh://git@github.com/g-research/fasttrackml-ui-mlflow.git
