insert lower and upper bound for mlflow version

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -46,6 +46,9 @@ classifiers = [
     "Topic :: Scientific/Engineering",
     "Topic :: Utilities",
 ]
+dependencies = [
+  "mlflow >= 2.8.0, < 3.0",
+]
 
 [project.urls]
 Homepage = "https://fasttrackml.io/"
