--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -27,6 +27,8 @@ body:
       value: |
         - FastTrackML Version: [e.g., 0.3.6]
         - Operating System: [e.g., Ubuntu 18.04]
+        - Database: [e.g., SQLite]
+        - Artifact Storage: [e.g., MinIO]
     validations:
       required: true
 
