--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -8,15 +8,17 @@ body:
     id: related-problem
     attributes:
       label: Is your feature request related to a problem? Please describe.
-      description: A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
+      description: A clear and concise description of what the problem is.
+      placeholder: ex. I'm always frustrated when [...]
     validations:
-      required: true
+      required: false
 
   - type: textarea
-    id: describe-solution
+    id: describe-solution-or-desired-feature
     attributes:
-      label: Describe the solution you'd like
+      label: Describe the solution/feature you'd like
       description: A clear and concise description of what you want to happen.
+      placeholder: ex. I wish I could [...]
     validations:
       required: true
 
