--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -5,22 +5,22 @@ labels: [ "feature" ]
 
 body:
   - type: textarea
-    id: related-problem
+    id: describe-desired-feature
     attributes:
-      label: Is your feature request related to a problem? Please describe.
-      description: A clear and concise description of what the problem is.
-      placeholder: ex. I'm always frustrated when [...]
-    validations:
-      required: false
-
-  - type: textarea
-    id: describe-solution-or-desired-feature
-    attributes:
-      label: Describe the solution/feature you'd like
+      label: Describe the feature you'd like
       description: A clear and concise description of what you want to happen.
       placeholder: ex. I wish I could [...]
     validations:
       required: true
+
+  - type: textarea
+    id: related-problem
+    attributes:
+      label: Is your feature request related to a problem? Please describe
+      description: A clear and concise description of what the problem is.
+      placeholder: ex. I'm always frustrated when [...]
+    validations:
+      required: false
 
   - type: textarea
     id: describe-alternatives
