--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,32 @@
         "black"
     ],
     "cSpell.words": [
-        "mlflow"
+        "Aimhub",
+        "Codespace",
+        "Codespaces",
+        "dataframe",
+        "dataframes",
+        "delaybetween",
+        "devcontainer",
+        "extrac",
+        "fasttrack",
+        "fasttrackml",
+        "figsize",
+        "gresearch",
+        "hspace",
+        "isin",
+        "mflow",
+        "Minio",
+        "mlflow",
+        "mlfow",
+        "ncols",
+        "nrows",
+        "numchecks",
+        "Quickstart",
+        "randint",
+        "workdir",
+        "wspace",
+        "xlabel",
+        "ylabel"
     ]
 }
