--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ dist/
 fml
 *.exe
 __debug_bin*
-venv
 
 # Local database
 fasttrackml.db*
@@ -28,8 +27,6 @@ python/build/
 python/*.egg-info/
 wheelhouse/
 
-benchmark_outputs**
-
-
+benchmark_outputs
 # Python package
 __pycache__/
