--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,4 +125,4 @@ jobs:
     uses: G-Research/charts/.github/workflows/invoke-push.yaml@master
     secrets:
       APP_ID: ${{ secrets.APP_ID }}
-      APP_PRIVATE_KEY: ${{ secrets.GH_APP_PEM }}
+      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
