--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -1,10 +1,34 @@
 services:
+
+  mlflow-server:
+    build:
+      dockerfile: MLflow.Server.Dockerfile
+    restart: always
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:5000" ]
+      interval: 5s
+      timeout: 5s
+    environment:
+      BACKEND_STORE_URI: "postgresql://postgres:postgres@postgres/postgres"
+    depends_on:
+      - postgres
+
+  mlflow-setup:
+    build:
+      dockerfile: MLflow.Server.Dockerfile
+    depends_on:
+      mlflow-server:
+        condition: service_healthy
+    command: python mlflow-setup.py
+
   postgres:
     image: postgres:latest
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "postgres"]
       interval: 5s
       timeout: 5s
+    ports:
+      - 5433:5432
     environment:
       - POSTGRES_PASSWORD=postgres
 
@@ -44,6 +68,8 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+      mlflow-setup:
+        condition: service_completed_successfully
     environment:
       GOCACHE: /cache/go-build
       GOMODCACHE: /cache/go-mod
